Fixed non whitespaced long titles and descriptions.

--- a/todolist/static/css/custom.css
+++ b/todolist/static/css/custom.css
@@ -2,6 +2,13 @@
 .finished-todos ul {
   list-style: none;
   text-align: left;
+  word-wrap: break-word;
+}
+
+th.todolist-title,
+tr td.todolist-title {
+  width: 50%;
+  word-break: break-word;
 }
 
 .finished-todos li {
